--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,6 +13,7 @@
     "34": "icon-34.png",
     "128": "icon-128.png"
   },
+  "options_page": "options.html",
   "host_permissions": ["https://music.youtube.com/*"],
   "content_scripts": [
     {
