--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
+    "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "throttle-debounce": "^5.0.0",
     "use-debounce": "^7.0.1"
