--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/KristofferTroncoso/ThemeSong"
   },
   "scripts": {
     "build": "node utils/build.js",
@@ -19,7 +19,6 @@
     "@mui/icons-material": "^5.4.1",
     "@mui/material": "^5.4.1",
     "@reduxjs/toolkit": "^1.8.3",
-    "debounce": "^1.2.1",
     "node-sass": "^7.0.1",
     "node-vibrant": "^3.1.6",
     "react": "^17.0.2",
@@ -27,9 +26,7 @@
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
     "react-icons": "^4.4.0",
-    "react-redux": "^8.0.2",
-    "throttle-debounce": "^5.0.0",
-    "use-debounce": "^7.0.1"
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
