Fix logo and clean up assets

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -24,5 +24,11 @@
       "run_at": "document_end",
       "js": ["contentScript.bundle.js"]
     }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": [ "/assets/*" ],
+      "matches": [ "https://music.youtube.com/*" ]
+    }
   ]
 }
