--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "typescript": "^4.5.5",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.3.1",
-    "worker-loader": "^3.0.8"
+    "webpack-dev-server": "^4.3.1"
   }
 }
