--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,10 +5,11 @@
   "version_name": "0.3.2-c",
   "description": "Dynamic themes and visualizers for YouTube Music™.",
   "background": { "service_worker": "background.bundle.js" },
-  "permissions": ["storage", "tabs", "scripting"],
+  "permissions": ["storage", "tabs", "scripting", "notifications"],
   "action": {
     "default_popup": "popup.html",
-    "default_icon": "icon-34.png"
+    "default_icon": "icon-34.png",
+    "default_title": "ThemeSong for YouTube Music™"
   },
   "icons": {
     "34": "icon-34.png",
