--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.4.1",
     "@mui/material": "^5.4.1",
-    "@reduxjs/toolkit": "^1.8.3",
+    "immer": "^9.0.15",
     "node-vibrant": "^3.1.6",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
-    "react-redux": "^8.0.2"
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
