Add google's image servers to host_permissions
This fixes errors when coming across these album images hosted on these
servers.
ytimg.com usually hosts screenshots of yt video songs.
gstatic.com hosts static images of default thumbnails such as those
for a user-uploaded song.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -18,7 +18,7 @@
     "128": "icon-128.png"
   },
   "options_page": "options.html",
-  "host_permissions": ["https://music.youtube.com/*"],
+  "host_permissions": ["https://music.youtube.com/*", "https://i.ytimg.com/*", "https://www.gstatic.com/*"],
   "content_scripts": [
     {
       "matches": [
