--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,7 +7,7 @@
   "description": "Dynamic themes and visualizers for YouTube Music™.",
   "minimum_chrome_version": "100",
   "background": { "service_worker": "background.bundle.js" },
-  "permissions": ["storage", "tabs", "scripting", "notifications"],
+  "permissions": ["storage", "tabs", "scripting"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": "icon-34.png",
