--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,10 +1,10 @@
 {
   "manifest_version": 3,
-  "name": "ThemeSong for YouTube Music™ (Dynamic Themes)",
+  "name": "ThemeSong for YouTube Music™ (Enhancer)",
   "short_name": "ThemeSong for YouTube Music™",
   "version": "0.4.6",
-  "description": "Dynamic themes and visualizers for YouTube Music™.",
-  "minimum_chrome_version": "100",
+  "description": "Enhancer for YouTube Music™. Dynamic Themes, Visualizers, Lyrics, Sleep Timer, and more!",
+  "minimum_chrome_version": "105",
   "background": { "service_worker": "background.bundle.js" },
   "permissions": ["storage", "tabs", "scripting"],
   "action": {
