--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "node utils/build.js",
     "start": "node utils/webserver.js",
-    "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
+    "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'",
+    "zip": "npm run build && web-ext build --source-dir ./build --artifacts-dir zip --overwrite-dest"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -59,6 +60,7 @@
     "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
+    "web-ext": "^7.5.0",
     "webpack": "^5.68.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.3.1"
