--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "immer": "^9.0.16",
     "node-vibrant": "^3.1.6",
     "react": "^18.2.0",
-    "react-color": "^2.19.3",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "use-debouncy": "^4.4.0",
     "uuid": "^9.0.0",
     "zustand": "^4.1.3"
   },
