--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -18,12 +18,14 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.4.1",
     "@mui/material": "^5.4.1",
+    "@react-three/fiber": "^8.13.0",
     "immer": "^9.0.16",
     "node-vibrant": "^3.1.6",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "three": "^0.153.0",
     "use-debouncy": "^4.4.0",
     "uuid": "^9.0.0",
     "zustand": "^4.1.3"
