--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -19,6 +19,7 @@
     "@mui/icons-material": "^5.4.1",
     "@mui/material": "^5.4.1",
     "@react-three/fiber": "^8.13.0",
+    "colorjs.io": "^0.4.5",
     "immer": "^9.0.16",
     "node-vibrant": "^3.1.6",
     "react": "^18.2.0",
