Add firefox and chrome build functionality into single repo

--- a/apps/extension/.eslintrc
+++ b/apps/extension/.eslintrc
@@ -2,6 +2,7 @@
   "extends": "react-app",
   "globals": {
     "chrome": "readonly",
-    "browser": "readonly"
+    "browser": "readonly",
+    "STORE_URL": "readonly"
   }
 }
