--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -17,6 +17,7 @@
     "zip-firefox": "pnpm run build-firefox && web-ext build --source-dir ./builds/firefox-build --artifacts-dir zip/firefox-zip --overwrite-dest"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.22.11",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.6",
@@ -44,7 +45,6 @@
     "@types/firefox-webext-browser": "^109.0.0",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.3",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "babel-preset-react-app": "^10.0.1",
